--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+    --tomato: hsl(4, 100%, 67%);
+    --dark-slate-grey: hsl(234, 29%, 20%);
+    --charcoal-grey: hsl(235, 18%, 26%);
+    --grey: hsl(231, 7%, 60%);
+    --white: hsl(0, 0%, 100%);
+}
+
 html {
     box-sizing: border-box;
     font-size: 62.5%;
@@ -5,4 +15,10 @@ html {
 
 body {
     margin: 0;
+    font-size: 1.6rem;
+    font-weight: normal;
+    line-height: 150%;
+    letter-spacing: 0px;
+    font-family: "Roboto", sans-serif;
+    color: var(--dark-slate-grey);
 }
