--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body {
     border-color: var(--tomato);
 }
 
-.submit-button {
+.button {
     padding: 2rem 7.2rem;
     cursor: pointer;
     font-weight: bold;
@@ -132,11 +132,12 @@ body {
     border-radius: 8px;
 }
 
-.submit-button:hover {
+.button:hover {
     background: linear-gradient(#FF6A3A, #FF527B);
+    box-shadow: 0px 16px 32px rgba(255, 97, 85, 0.5);
 }
 
-.submit-button:active {
+.button:active {
     transform: scale(0.98);
 }
 
@@ -146,3 +147,26 @@ body {
 }
 
 /* Success message */
+#success-card {
+    max-width: 50.4rem;
+}
+
+.success-card-content {
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+}
+
+.success-card-content h2 {
+    margin: 4rem 0 2.4rem 0;
+}
+
+.success-card-content p {
+    margin-bottom: 4rem;
+}
+
+#userEmail {
+    font-weight: bold;
+}
+
+#dismiss-button {
+    width: 37.6rem;
+}
